refactor: stream transient frames through API ingest
Replace per-frame Worker POST relay with a turn-scoped NDJSON upload to the API. Add early API-side frame dedup before channel activity side effects while keeping transient relay best-effort.